test/gcast1.l1.out
entry: var params, 4 locals, 0 temps
uint16
uint32
uint16
error: attempt to cast to incomplete type
               entry	(gcast1.l1:8)
